[package]
name = "megamaertz"
version = "0.1.0"
authors = ["Jan Keim <jan.keim@protonmail.com>", "Nico Muerdter <nicomuerdter@gmail.com>", "Vanessa Steurer"]

[dependencies]
clippy = "0.0.121"
cortex-m="0.1.4"
r0="0.1.0"

[dependencies.stm32f7_discovery]
git="https://github.com/embed-rs/stm32f7-discovery"
version="0.1.0"

[profile.release]
lto=true