[package]
name = "megamaertz"
version = "1.0.1"
authors = ["Jan Keim <jan.keim@protonmail.com>", "Nico Muerdter <nicomuerdter@gmail.com>", "Vanessa Steurer <vanessa_steurer@web.de"]
license = "MIT/Apache-2.0"

[dependencies]
clippy = "0.0.121"
cortex-m="0.1.4"
r0="0.1.0"
bit_field="0.6.0"

[dependencies.stm32f7_discovery]
git="https://github.com/embed-rs/stm32f7-discovery"
version="0.1.0"

[profile.release]
lto=true
debug=true
